--- a/package.json
+++ b/package.json
@@ -10,15 +10,13 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "supabase:up": "npx supabase start",
-    "supabase:function": "npx supabase functions serve --env-file ./supabase/functions/.env --no-verify-jwt"
+    "supabase:down": "npx supabase stop",
+    "supabase:functions": "npx supabase functions serve --env-file ./supabase/functions/.env --no-verify-jwt"
   },
   "dependencies": {
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-toast": "^1.2.1",
-    "@supabase/auth-helpers-react": "^0.5.0",
-    "@supabase/auth-ui-react": "^0.4.7",
-    "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.48.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -42,7 +40,6 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "lovable-tagger": "^1.0.19",
     "postcss": "^8.4.47",
     "supabase": "^2.9.6",
     "tailwindcss": "^3.4.11",
