rewrite: migrate to react-router/remix

--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "tomo-health-application",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "build:dev": "vite build --mode development",
+    "dev": "react-router dev",
+    "build": "react-router build",
+    "build:dev": "react-router build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview",
+    "typecheck": "react-router typegen && tsc",
+    "preview": "react-router preview",
     "supabase:up": "npx supabase start",
     "supabase:down": "npx supabase stop",
     "supabase:functions": "npx supabase functions serve --env-file ./supabase/functions/.env --no-verify-jwt"
@@ -17,9 +18,11 @@
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-toast": "^1.2.1",
+    "@react-router/node": "^7.1.5",
     "@supabase/supabase-js": "^2.48.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "isbot": "^5",
     "lucide-react": "^0.462.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -31,6 +34,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@react-router/dev": "^7.1.5",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
