--- a/package.json
+++ b/package.json
@@ -6,15 +6,27 @@
     "build": "react-router build",
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
+    "typecheck": "react-router typegen && tsc",
+    "build:dev": "react-router build --mode development",
+    "supabase:up": "npx supabase start",
+    "supabase:down": "npx supabase stop",
+    "supabase:functions": "npx supabase functions serve --env-file ./supabase/functions/.env --no-verify-jwt"
   },
   "dependencies": {
+    "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.6",
     "@react-router/node": "^7.1.5",
     "@react-router/serve": "^7.1.5",
+    "@supabase/supabase-js": "^2.48.1",
+    "class-variance-authority": "^0.7.1",
     "isbot": "^5.1.17",
+    "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.1.5"
+    "react-dropzone": "^14.3.5",
+    "react-markdown": "^9.0.3",
+    "react-router": "^7.1.5",
+    "tailwind-merge": "^3.0.1"
   },
   "devDependencies": {
     "@react-router/dev": "^7.1.5",
@@ -23,6 +35,7 @@
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
     "react-router-devtools": "^1.1.0",
+    "supabase": "^2.12.1",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.7.2",
     "vite": "^5.4.11",
